--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <a href="/"><img src="https://media-ctrl.licdn.com/mpr/mpr/shrink_200_200/p/1/000/236/104/20c4bc4.jpg"></a>
+      <p>Dan<br><span>Digital exponent</span></p>
     </header>
 
     <div class="container">
