--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet">
-    <link href="print.css" rel="stylesheet">
+    <link href="print.css" rel="stylesheet" media="print">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
