--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio-Optimising the CRP: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="orientation:portrait">
 
     <style>html {
 font-size: 100%;
