--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ header p { padding-left: 4.5em;}
       ga('send', 'pageview');
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="perfmatters.js"></script>
+    <script async src="perfmattersx234dff.js"></script>
   </head>
 
   <body>
