--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ header p { padding-left: 4.5em;}
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="perfmattersx234dff.js"></script>
+   <!-- <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="perfmattersx234dff.js"></script>-->
   </head>
 
   <body>
