--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ header p { padding-left: 4.5em;}
     Contact
 
 </style>
-    <link href="print.css" rel="stylesheet" media="print">
+   <!-- <link href="print.css" rel="stylesheet" media="print">-->
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
