--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="orientation:portrait">
    <!-- <link href="print.css" rel="stylesheet" media="print">-->
-   <!--<link href=style.css" rel="stylesheet"> -->
+   <!-- <link href="style.css" rel="stylesheet"> -->
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
